@@ -1,3 +1,8 @@
+2014-04-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
+	* soap-client.el (soap-encode-xs-complex-type): Fix compilation
+	warning.  Print e-name in warnings, or element if e-name is nil.
+
 2014-04-20  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
 	* soap-client.el (soap-xs-element): Add alternatives slot.
